force-app/main/default/objects/Review1__c/Review1__c.object-meta.xml
<CustomObject>
    <description>Tracks the collaborative plan review process and associated documents</description>
    <label>Review1</label>
    <nameField>
        <displayFormat>T-{0000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>