force-app/main/default/objects/Review1__c/fields/Permit__c.field-meta.xml
<CustomField>
    <fullName>Permit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Permit</label>
    <referenceTo>Permit__c</referenceTo>
    <relationshipName>Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>